Fix offcenter hero heading on smaller screens

--- a/client/src/components/common/Hero/Hero.module.scss
+++ b/client/src/components/common/Hero/Hero.module.scss
@@ -27,6 +27,7 @@
   text-transform: unset;
   line-height: 0.9;
   max-width: 13ch;
+  margin-inline: auto;
 
   span {
     color: var(--clr-primary-light);
